boreal/tests/assets/invalid_files/compilation/invalid_identifier_use2.yar
// [error: wrong use of identifier]
rule a {
    condition: true
}

rule c {
    condition:
        a() == 2
}
